--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+body {
+    background-color: #e1dfdf !important;
+}
+
 .navbar {
     background: #f0eff6;
 }
@@ -19,11 +23,10 @@
     justify-content: center;
     width: 70%;
     margin: auto;
-    padding: 20px;
+    padding: 10px;
 }
 
 .titulo_main {
-    text-align: center;
     margin: 20px 0 0;
     line-height: 2em;
     border-bottom: 5px solid #8615ac;
@@ -40,7 +43,12 @@
 
 .card {
     margin: 10px;
+    transition: transform 0.3s ease;
 }
+
+.card:hover {
+    transform: scale(1.1);
+  }
 
 .fecha {
     color: #868686;
@@ -54,7 +62,6 @@
 
 .titulo-seccion {
     height: 40px;
-    text-align: center;
     margin-top: 45px;
     margin-bottom: 50px;
 }
@@ -64,16 +71,17 @@
     display: flex;
     justify-content: center;
     justify-content: space-evenly;
+    margin-bottom: 20px;
 }
 
 .titulo_aside {
-    border-bottom: 5px solid #1533ac;
-    padding-bottom: 10px;
+    border-bottom: 5px solid #00b953;
+    padding-bottom: 21px;
 }
 
 .youtube {
     display: inline-block;
-    padding: 30px 45px 30px 45px;
+    padding: 10px 35px 10px 35px;
     border-radius: 5px;
     border: 2px solid #000;
 }
@@ -97,7 +105,7 @@
 
 .instagram {
     display: inline-block;
-    padding: 30px 45px 30px 45px;
+    padding: 10px 35px 10px 35px;
     border-radius: 5px;
     border: 2px solid #000;
 }
@@ -110,7 +118,7 @@
             #c13584,
             #e1306c,
             #fd1d1d);
-            border: none;
+    border: none;
 }
 
 .instagram2-icon {
@@ -130,13 +138,94 @@
 
 
 
+.aside_input {
+    background: #101843;
+    color: #ffffff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 20px;
+    margin-bottom: 20px;
+}
+
+.aside_input span {
+    margin-bottom: 20px;
+    font-size: 20px;
+}
+
+.aside_input input {
+    height: 30px;
+    font-size: 20px;
+}
+
+.boton-aside {
+    padding: 5px 20px 5px;
+    margin: 20px;
+    border-radius: 5px;
+    background: #02c966;
+    color: #ffffff;
+    border: none;
+}
+
+.aside_input input::placeholder {
+    text-align: center;
+    border-radius: 5px;
+}
+
 
 .resumen {
-    margin-bottom: 40px;
     padding: 20px;
 }
 
 .resumen h3 {
     border-bottom: 5px solid #8615ac;
     padding-bottom: .5em;
+}
+
+/* <!----------------------------------- Footer ---------------------------------------> */
+.ad {
+    margin-bottom: 30px;
+}
+
+
+.links {
+    list-style: none;
+    display: flex;
+    justify-content: center;
+    background: #000;
+    padding: 20px;
+}
+
+.links li a {
+    text-decoration: none;
+    color: #ffffff;
+    margin: 30px;
+    font-size: 20px;
+}
+
+
+.infoCopy {
+    text-align: center;
+}
+
+.copy {
+    font-weight: 300;
+    font-size: 25px;
+    color: #ffffff;
+}
+
+
+
+
+
+/* <!----------------------------------- MediaQueryes ---------------------------------------> */
+
+
+@media screen and (max-width: 400px) {
+    .titulo_main {
+        margin-top: 0px;
+    }
+
+
 }
