--- a/css/style.css
+++ b/css/style.css
@@ -8,14 +8,22 @@ body {
     background-color: #e1dfdf !important;
 }
 
+/*============================== menu =============================== */
 .navbar {
-    background: #f0eff6;
+    background: #9329c0;
+}
+
+.navbar-brand, .nav-link {
+    color: #ffffff !important;
+    font-weight: 500;
+}
+
+.navbar-brand, .nav-link:hover {
+    color: #cacaca !important;
 }
 
 
-.menu {
-    height: 70px;
-}
+/*============================== slider =============================== */
 
 
 .carousel {
@@ -25,6 +33,8 @@ body {
     margin: auto;
     padding: 10px;
 }
+
+/*============================== Main =============================== */
 
 .titulo_main {
     margin: 20px 0 0;
@@ -41,14 +51,14 @@ body {
     margin-bottom: 30px;
 }
 
-.card {
+.card-main {
     margin: 10px;
     transition: transform 0.3s ease;
 }
 
-.card:hover {
+.card-main:hover {
     transform: scale(1.1);
-  }
+}
 
 .fecha {
     color: #868686;
@@ -59,6 +69,23 @@ body {
     margin-bottom: 10px;
     height: 5em;
 }
+
+.resumen {
+    padding: 20px;
+}
+
+.resumen h3 {
+    border-bottom: 5px solid #8615ac;
+    padding-bottom: .5em;
+}
+
+.titulo-info {
+    font-size: 18px;
+    line-height: 1.5;
+}
+
+
+/*============================== Aside =============================== */
 
 .titulo-seccion {
     height: 40px;
@@ -137,7 +164,6 @@ body {
 }
 
 
-
 .aside_input {
     background: #101843;
     color: #ffffff;
@@ -173,15 +199,6 @@ body {
     border-radius: 5px;
 }
 
-
-.resumen {
-    padding: 20px;
-}
-
-.resumen h3 {
-    border-bottom: 5px solid #8615ac;
-    padding-bottom: .5em;
-}
 
 /* <!----------------------------------- Footer ---------------------------------------> */
 .ad {
@@ -226,6 +243,5 @@ body {
     .titulo_main {
         margin-top: 0px;
     }
-
 
 }
