--- a/css/style.css
+++ b/css/style.css
@@ -6,20 +6,28 @@
 
 body {
     background-color: #e1dfdf !important;
+    margin: 0;
 }
 
 /*============================== menu =============================== */
+
 .navbar {
-    background: #9329c0;
+    background: #000;
 }
 
-.navbar-brand, .nav-link {
+.navbar-brand,
+.nav-link {
     color: #ffffff !important;
     font-weight: 500;
 }
 
-.navbar-brand, .nav-link:hover {
+.navbar-brand,
+.nav-link:hover {
     color: #cacaca !important;
+}
+
+.navbar-toggler {
+    background-color: #ffffff !important;
 }
 
 
@@ -35,6 +43,10 @@ body {
 }
 
 /*============================== Main =============================== */
+
+.main-single {
+    margin-top: 30px;
+}
 
 .titulo_main {
     margin: 20px 0 0;
@@ -54,6 +66,10 @@ body {
 .card-main {
     margin: 10px;
     transition: transform 0.3s ease;
+}
+
+.card-body {
+    width: auto;
 }
 
 .card-main:hover {
@@ -79,6 +95,7 @@ body {
     padding-bottom: .5em;
 }
 
+
 .titulo-info {
     font-size: 18px;
     line-height: 1.5;
@@ -86,6 +103,10 @@ body {
 
 
 /*============================== Aside =============================== */
+
+aside {
+    margin: 0 auto 0 !important;
+}
 
 .titulo-seccion {
     height: 40px;
@@ -199,19 +220,31 @@ body {
     border-radius: 5px;
 }
 
+.ad-aside {
+text-align: center;
+}
+
+
+
 
 /* <!----------------------------------- Footer ---------------------------------------> */
 .ad {
     margin-bottom: 30px;
 }
 
+.img-ad {
+    width: 90%;
+}
+
+
+
 
 .links {
     list-style: none;
     display: flex;
     justify-content: center;
-    background: #000;
     padding: 20px;
+    background: #000;
 }
 
 .links li a {
@@ -229,7 +262,6 @@ body {
 .copy {
     font-weight: 300;
     font-size: 25px;
-    color: #ffffff;
 }
 
 
@@ -239,9 +271,19 @@ body {
 /* <!----------------------------------- MediaQueryes ---------------------------------------> */
 
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 600px) {
     .titulo_main {
         margin-top: 0px;
     }
 
+
+}
+
+@media screen and (max-width: 420px) {
+    .links {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+    }
 }
